# promptr

./: .gitignore  README.md  com.headlessflower.Promptr.yml  org.gnome.Platform.json  pyproject.toml  python3-requirements-flatpak.json  requirements-flatpak.txt
data/: com.headlessflower.Promptr.desktop  com.headlessflower.Promptr.gschema.xml  com.headlessflower.Promptr.metainfo.xml
scripts/: run-dev.sh
src/promptr/: constants.py  document_loader.py  main.py  preferences.py  window.py
